Fixed 20px margin

--- a/themes/babelium/css/layout.css
+++ b/themes/babelium/css/layout.css
@@ -111,7 +111,7 @@ aside#motd
 	ul#motdmessages, ul#motdmessageshelper
 	{
 		width: 100%;
-		padding: 20px;
+		padding-top: 20px;
 	}
 	
 		ul#motdmessageshelper > li
